Bug 1818933 - Synthesize flex item's baseline if its inline axis is the cross axis. r=dholbert

After this patch, we'll fail four tests due to reference files written in grid
layout, and we've had bug 1609403 for grid baseline alignment.

Differential Revision: https://phabricator.services.mozilla.com/D185872